--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,19 +1,18 @@
 /* ================== Layout für Index Page ================== */
 .grid-container {
-  height: 100vh;
   display: grid;
   grid-template-areas:
-    'header'
-    'main'
-    'main'
-    'footer';
+    "header"
+    "main"
+    "main"
+    "footer";
   grid-template-rows: auto 1fr 1fr auto;
-  padding: 3vh;
+  padding: 3vh 3vh 0 3vh;
 }
 
 /* Menüleiste */
 .header-space {
-  grid-area: header; 
+  grid-area: header;
 }
 
 /* Bereich für den eigentlichen content */
@@ -37,8 +36,9 @@
 .main-space-bottom {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-areas: "left1 right1"
-  "left2 right2";
+  grid-template-areas:
+    "left1 right1"
+    "left2 right2";
   justify-content: center;
   gap: 0 4vw;
   padding: 0 0 6vh 0;
@@ -47,7 +47,11 @@
 .text-left {
   grid-area: left1;
   display: flex;
-  align-items: center;
+  vertical-align: middle;
+  justify-content: center;
+}
+.text-left p {
+  text-align: justify;
 }
 .main-space-bottom-left {
   grid-area: left2;
@@ -57,11 +61,11 @@
   justify-content: center;
   gap: 2vh;
 }
-.main-space-bottom-left form > input{
+.main-space-bottom-left form > input {
   margin-left: auto;
   margin-top: 4vh;
 }
-.main-space-bottom-left-input-fields{
+.main-space-bottom-left-input-fields {
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr;
@@ -71,30 +75,30 @@
 /* Layout für Bereich Datensatz auswählen */
 .text-right {
   grid-area: right1;
+  display: flex;
+  vertical-align: middle;
+  justify-content: center;
 }
-.text-right p{
-  text-align: left;
+.text-right p {
+  text-align: justify;
 }
-.main-space-bottom-right{
+.main-space-bottom-right {
   grid-area: right2;
   height: auto;
   display: grid;
   justify-content: center;
   gap: 2vh;
 }
-.main-space-bottom-right-input-field{
-  display:flex;
+.main-space-bottom-right-input-field {
+  display: flex;
   justify-content: center;
   align-items: center;
   gap: 1vh 2vw;
 }
-.main-space-bottom-right-buttons{
+.main-space-bottom-right-buttons {
   display: grid;
   grid-template-columns: auto auto;
 }
-
-
-
 
 /* ================== Navigation Bar Layout für Index Page ================== */
 
@@ -103,12 +107,12 @@ ul[navbar] :first-child a {
   display: block;
   padding: 1.3rem;
   text-transform: uppercase;
-  position:relative;
+  position: relative;
   vertical-align: middle;
   z-index: 1;
   text-shadow: 1px 0px rgba(0, 0, 0, 0.4);
   color: #98a6b6;
-  letter-spacing: .2em;
+  letter-spacing: 0.2em;
   text-decoration: none;
   transition: color 200ms;
   transform-style: preserve-3d;
@@ -142,18 +146,19 @@ ul[navbar] :first-child a:hover:after {
 }
 
 /* deaktivieren von "Labeling" und "Analyse" Navigation Button */
-ul[navbar] :nth-child(2n+3) a {
+ul[navbar] :nth-child(2n + 3) a {
   display: block;
   padding: 1.3rem;
   text-transform: uppercase;
-  position:relative;
+  position: relative;
   vertical-align: middle;
   z-index: 1;
   color: #5a6a78;
-  letter-spacing: .2em;
+  letter-spacing: 0.2em;
   text-decoration: none;
   transform-style: preserve-3d;
 }
-ul[navbar] :nth-child(2n+3) a:hover {
+ul[navbar] :nth-child(2n + 3) a:hover {
   color: #5a6a78;
 }
+
