--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Labeling</title>
     <script src="../static/js/labeling.js"></script>
+    <!--nächste Zeile verändert Text Größe und Abstände der Navbar-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"> </script>
@@ -12,12 +13,18 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">
     <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"> </script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!--nächste Zeile verändert Höhe der Navbar-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!--nächste Zeile verändert Höhe der Pfeile; Farbe und Abstand der hr-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../static/css/labeling.css">
     <link rel="stylesheet" href="../static/css/tweet.css">
     <link rel="stylesheet" href="../static/css/general.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 
 </head>
 
@@ -33,22 +40,26 @@
                 <li class="arrow"></li>
                 <li><a class="nav-link active" href="/labeling" data-title="labeling">Labeling</a></li>
                 <li class="arrow"></li>
-                <li><a role="link" aria-disabled="true" data-title="analyse">Analyse</a></li>
+                <li><a class="nav-link" href="/analysis" data-title="analyse">Analyse</a></li>
             </ul>
         </div>
 
         <div class="main-space">
             <div class="main-space-top">
-                <p>Das hier ist die Labeling Seite. Ein Tweet nach dem Anderen wird aus dem Datensatz angezeigt und kann
-                    mit einem Label versehen werden. Ungeeignete Tweets können vollständig aus dem Datensatz gelöscht
-                    werden. Mit dem Button "Training starten" gelangt man zum nächsten Schritt, wo das Modell mit den
-                    bereits erstellten Labels trainiert wird.</p>
+                <p>Unser Annotationstool bietet eine ansprechende Benutzeroberfläche, in der die Tweets, die für die
+                    Analyse ausgewählt wurden, übersichtlich präsentiert werden. Der Annotator verfügt über
+                    Schaltflächen, welche es ermöglichen das Sentiment eines Tweets als positiv, negativ oder neutral zu
+                    kennzeichnen. Zusätzlich bietet die Benutzeroberfläche die Möglichkeit, Tweets, die für die Analyse
+                    irrelevant sind, auszuschließen. Nach einer gewissen Anzahl von Annotationen, kann das entsprechende
+                    Machine Learning Modell trainiert werden und dem Annotator Unterstützung leisten. Beim Drücken auf
+                    "Intelligent sortieren" werden die Tweets nach einer Kombination von Faktoren geordnet, die eine
+                    möglichst optimale Performance des Machine Learning Modells erlauben.
+                </p>
                 <hr index1>
 
-
-                <!--@ELIAS Button bitte noch entfernen. Habe ich nur gelassen, um dir die Funktionsweise zu zeigen.-->
                 <div class="w3-light-grey w3-round">
-                    <div id="myBar" class="w3-container w3-round w3-blue" style="width:{{progress}}%">{{progress}}%</div>
+                    <div id="myBar" class="w3-container w3-round w3-blue" style="width:{{progress}}%">{{progress}}%
+                    </div>
                 </div>
 
             </div>
@@ -100,7 +111,7 @@
                                         </g>
                                     </svg></div>
                             </div>
-                            <p>Anti</p>
+                            <p>Positiv</p>
                         </div>
                         <div>
                             <div class="bottom-button green">
@@ -129,7 +140,7 @@
                                         </g>
                                     </svg></div>
                             </div>
-                            <p>Pro</p>
+                            <p>Negativ</p>
                         </div>
                         <div>
                             <div class="bottom-button blue">
@@ -154,16 +165,16 @@
                 </div>
 
                 <div class="main-space-bottom-right">
-                    <button class="labelbutton" type="button" , onclick="Previous_Tweet()" , id="Previous">
-                        VorherigerTweet</button>
-                    <button class="labelbutton" type="button" , onclick="Next_Tweet()" , id="Next">
-                        NächsterTweet</button>
                     <button class="labelbutton" type="button" onclick="Save_Results()" data-toggle="modal"
-                        data-target="#SaveDataModal">
-                        Active Learning</button>
+                        data-target="#SaveDataModal" active-learning>
+                        Intelligent sortieren</button>
+                    <button class="labelbutton" type="button" , onclick="Previous_Tweet()" , id="Previous">
+                        Vorheriger Tweet</button>
+                    <button class="labelbutton" type="button" , onclick="Next_Tweet()" , id="Next">
+                        Nächster Tweet</button>
                     <button class="labelbutton" type="button" onclick="Switch_To_Model_Analysis()">
                         Data Facts</button>
-                    <!--@ELIAS  Hier muss noch die Funktionalität eingebaut werden, dass der Tweet aus dem Datensatz gelöscht wird-->
+
                     <!-- Default switch -->
                     <div id="checkbox-container" class="form-check form-switch">
                         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" />
@@ -223,48 +234,48 @@
     </div>
 
     <script>
-            // if checked add event listeners
-            labeled_pro.addEventListener('click', function() {
-                if(document.getElementById('flexSwitchCheckDefault').checked) {
-                    Pro_Label();
-                    Next_Tweet();
-                    console.log('Checkbox checked');
-                }
-                else {
-                    console.log("Checkbox is not checked..");
-                }
-            })
-            labeled_anti.addEventListener('click', function() {
-                if(document.getElementById('flexSwitchCheckDefault').checked) {
-                    Anti_Label();
-                    Next_Tweet();
-                    console.log('Checkbox checked');
-                }
-                else {
-                    console.log("Checkbox is not checked..");
-                }
-            })
-            labeled_neutral.addEventListener('click', function() {
-                if(document.getElementById('flexSwitchCheckDefault').checked) {
-                    Neutral_Label();
-                    Next_Tweet();
-                    console.log('Checkbox checked');
-                }
-                else {
-                    console.log("Checkbox is not checked..");
-                }
-            })
-            labeled_news.addEventListener('click', function() {
-                if(document.getElementById('flexSwitchCheckDefault').checked) {
-                    News_Label();
-                    Next_Tweet();
-                    console.log('Checkbox checked');
-                }
-                else {
-                    console.log("Checkbox is not checked..");
-                }
-            })
-                
+        // if checked add event listeners
+        labeled_pro.addEventListener('click', function () {
+            if (document.getElementById('flexSwitchCheckDefault').checked) {
+                Pro_Label();
+                Next_Tweet();
+                console.log('Checkbox checked');
+            }
+            else {
+                console.log("Checkbox is not checked..");
+            }
+        })
+        labeled_anti.addEventListener('click', function () {
+            if (document.getElementById('flexSwitchCheckDefault').checked) {
+                Anti_Label();
+                Next_Tweet();
+                console.log('Checkbox checked');
+            }
+            else {
+                console.log("Checkbox is not checked..");
+            }
+        })
+        labeled_neutral.addEventListener('click', function () {
+            if (document.getElementById('flexSwitchCheckDefault').checked) {
+                Neutral_Label();
+                Next_Tweet();
+                console.log('Checkbox checked');
+            }
+            else {
+                console.log("Checkbox is not checked..");
+            }
+        })
+        labeled_news.addEventListener('click', function () {
+            if (document.getElementById('flexSwitchCheckDefault').checked) {
+                News_Label();
+                Next_Tweet();
+                console.log('Checkbox checked');
+            }
+            else {
+                console.log("Checkbox is not checked..");
+            }
+        })
+
     </script>
 
     <script>
@@ -272,22 +283,22 @@
         var checkbox = document.getElementById("flexSwitchCheckDefault");
 
         // keep the setting state intact after refreshing the page
-        checkbox.addEventListener('change', function save(){
+        checkbox.addEventListener('change', function save() {
             console.log("save");
             var checkbox = document.getElementById('flexSwitchCheckDefault');
-            if(document.getElementById('flexSwitchCheckDefault').checked) {
+            if (document.getElementById('flexSwitchCheckDefault').checked) {
                 localStorage.setItem('flexSwitchCheckDefault', true);
             }
-            else{
+            else {
                 localStorage.setItem('flexSwitchCheckDefault', false);
             }
         });
 
-        function load(){    
+        function load() {
             console.log('load');
             var checked = localStorage.getItem('flexSwitchCheckDefault');
             if (checked == "true") {
-                document.getElementById("flexSwitchCheckDefault").setAttribute('checked','checked');
+                document.getElementById("flexSwitchCheckDefault").setAttribute('checked', 'checked');
             }
         };
     </script>
