--- a/static/css/labeling.css
+++ b/static/css/labeling.css
@@ -3,9 +3,8 @@
   display: grid;
   grid-template-areas:
     "header"
-    "main"
-    "footer";
-  grid-template-rows: auto 1fr auto;
+    "main";
+  grid-template-rows: auto 1fr;
   padding: 3vh 3vh 0 3vh;
 }
 
@@ -40,13 +39,6 @@
   gap: 2vh;
 }
 
-/* Layout für Bereich mit Pop Up Meldungen */
-.footer-space {
-  grid-area: footer;
-  display: flex;
-  justify-content: center;
-}
-
 .first {
   position: absolute;
 }
@@ -61,6 +53,55 @@
   border-radius: 10px 20px;
   margin: 1vh 0;
   text-align: center;
+}
+/* Layout für Auto-Nächster-Tweet-Schieber */
+div[class="toggle-switch"] {
+  display: block;
+}
+
+#flexSwitchCheckDefault {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+.toggle-switch-label {
+  max-width: 45%;
+  cursor: pointer;
+  display: flex;
+  height: 4vh;
+  background: grey;
+  border-radius: 10px 20px;
+  position: relative;
+  text-indent: 110%;
+  white-space: nowrap;
+  align-items: center;
+}
+
+.toggle-switch-label:after {
+  content: "";
+  position: absolute;
+  top: 5%;
+  left: 2px;
+  width: 30%;
+  height: 90%;
+  border-radius: 10px 20px;
+  background: #fff;
+  transition: 0.3s;
+}
+
+#flexSwitchCheckDefault:checked + label {
+  background: #405cf5;
+  box-shadow: 0 0 10px #00b8cc;
+}
+
+#flexSwitchCheckDefault:checked + label:after {
+  left: calc(100% - 2px);
+  transform: translateX(-100%);
+}
+
+.toggle-switch-label:active:after {
+  width: 50%;
 }
 
 /* ================== Navigation Bar Layout für Labeling Page ================== */
