--- a/static/css/general.css
+++ b/static/css/general.css
@@ -15,11 +15,15 @@ body {
 
 p,
 label,
-#analysis h3 {
+#analysis h3[white] {
   color: azure;
 }
 #index h3 {
   text-shadow: 0 0 10px #ffffff;
+}
+#analysis h3:not(h3[white]) {
+  text-shadow: 0 0 10px #ffffff;
+  font-size: xx-large;
 }
 
 .bottom-buttons p {
