--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -31,7 +31,7 @@
         <div class="header-space">
             <!--Navigation bar to chose bewteen pages-->
             <ul navbar>
-                <li><a class="nav-link" href="/" data-title="home">Home</a></li>
+                <li><a class="nav-link" href="/" data-title="home">Start</a></li>
                 <li class="arrow"></li>
                 <li><a class="nav-link" href="/labeling" data-title="labeling">Labeling</a></li>
                 <li class="arrow"></li>
@@ -53,17 +53,17 @@
                 <div class="main-space-bottom-graphics">
                     <!--Display the WordCloud()-->
                     <div class="text">
-                        <h3> Häufigste Hashtags</h3>
+                        <h3 white> Häufigste Hashtags</h3>
                     </div>
                     <img class="wordcloud" src="../static/plots/wordcloud.png" alt="my plot">
                     <!--Display the PieChart()-->
                     <div class="text">
-                        <h3> Anteil der manuell erstellten Labels</h3>
+                        <h3 white> Anteil der manuell erstellten Labels</h3>
                     </div>
                     <img class="piechart" src="../static/plots/piechart.png" alt="my plot">
                 </div>
                 <div class="text">
-                    <h3> Tweet mit den meisten Likes</h3>
+                    <h3 white> Tweet mit den meisten Likes</h3>
                 </div>
                 <div class="tweet default">
                     <div class="user-info">
@@ -159,7 +159,7 @@
         </div>
         <div class="table-wrap">
             <div class="padding">
-                <h3>Alle Tweets im Datensatz</h3>
+                <h3 white>Alle Tweets im Datensatz</h3>
                 <table id="dataTable" class="table table-striped table-bordered table-responsive table-hover">
                     <thead>
                         <tr>
