--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         <div class="header-space">
             <!--Navigation bar to chose bewteen pages-->
             <ul navbar>
-                <li><a class="nav-link active" href="/" data-title="home">Home</a></li>
+                <li><a class="nav-link active" href="/" data-title="home">Start</a></li>
                 <li class="arrow"></li>
                 <li><a role="link" aria-disabled="true" data-title="labeling">Labeling</a></li>
                 <li class="arrow"></li>
@@ -115,22 +115,20 @@
             </div>
         </div>
         <div class="footer-space">
-            <!--message flashes when we would go to previous tweet but we already have the first tweet-->
+            <!--message flashes when dataset was created or couldn't be created-->
             {% with messages = get_flashed_messages() %}
             {% if messages %}
-            <div class="second">
-                <div class="alert alert-primary alert-dismissible fade show" role="alert">
-                    {% for message in messages %}
-                    <p>{{ message }}</p>
-                    {% endfor %}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                {% endif %}
-                {% endwith %}
-                {% block body %}{% endblock %}
+            <div id="pop_up">
+                {% for message in messages %}
+                {{ message }}
+                {% endfor %}
             </div>
+            <script type="text/javascript">
+                show_pop_up();
+            </script>
+            {% endif %}
+            {% endwith %}
+            {% block body %}{% endblock %}
         </div>
 
         <script>
