--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -78,7 +78,7 @@
                                         </g>
                                     </svg></div>
                             </div>
-                            <p id="pro_labeltext">Pro</p>
+                            <p id="pro_labeltext" class='{{"labeled_pro" if labeled_pro}}'>Pro</p>
                         </div>
                         <div>
                             <div class="bottom-button green">
@@ -93,7 +93,7 @@
                                         </g>
                                     </svg></div>
                             </div>
-                            <p id="anti_labeltext">Anti</p>
+                            <p id="anti_labeltext" class='{{"labeled_anti" if labeled_anti}}'>Anti</p>
                         </div>
                         <div>
                             <div class="bottom-button red">
@@ -107,7 +107,7 @@
                                         </g>
                                     </svg></div>
                             </div>
-                            <p id="neutral_labeltext">Neutral</p>
+                            <p id="neutral_labeltext" class='{{"labeled_neutral" if labeled_neutral}}'>Neutral</p>
                         </div>
                         <div>
                             <div class="bottom-button blue">
@@ -126,7 +126,7 @@
                                         </g>
                                     </svg></div>
                             </div>
-                            <p id="news_labeltext">Skip</p>
+                            <p id="news_labeltext" class='{{"labeled_news" if labeled_news}}'>Skip</p>
                         </div>
                     </div>
                     <hr>
