--- a/static/css/start.css
+++ b/static/css/start.css
@@ -36,3 +36,10 @@ p {
   text-align: center;
   line-height: 0;
 }
+#video-container {
+  padding-top: 5vh;
+}
+iframe {
+  border-radius: 10px 20px;
+  border: 3px solid #cfd6dd;
+}
