--- a/templates/start.html
+++ b/templates/start.html
@@ -31,6 +31,12 @@
     <form action="{{ url_for('hello_world') }}" method="POST">
         <input class="homebutton" type="submit" value="Start" id="start" />
     </form>
+    <div id="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KeoGhn9EMw0" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+    </div>
 </body>
 
 </html>
